public/css/style.css
@import url('https://fonts.googleapis.com/css?family=Indie+Flower|Open+Sans+Condensed:300');


body {
  background: url("/images/background.jpg") no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.vertical-center {
  min-height: 100%;
  min-height: 100vh;
  display: flex;
  align-items: center;
}

.center-vertical-no-flex {
  min-height: 100%;
  min-height: 100vh;
  display: inline;
  align-items: center;
}

.main-area {
  margin-top: 20px;
}

.dropdown-item {
  color: #87909c;
}

.normal {
  font-weight: normal;
}

.white-text {
  color: white;
  font-family: "Open Sans Condensed", sans-serif;
}

h1.normal {
  padding-top: 10px;
  font-size: 4em;
  text-align: center;
}

.center-block {
  display: block;
  margin: auto;
}

.middle {
  margin-top: 18%;
}

a.round {
  border-radius: 24px;
  font-family: "Open Sans Condensed", sans-serif;
  font-size: 1.2em;
  margin: 10px auto;
  padding: 5px 0;
}

footer {
  position: fixed;
  bottom: 0;
  left: 0;
  background: #0c223e;
  width: 100%;
  text-align: center;
  color: #3d5469;
  font-size: .6em;
}

footer a {
  color: #3d5469;
  text-decoration: underline;
}

.pad {
  padding: 20px;
}

div[id^='dream_'].card {
  margin: 15px;
}

.error {
  background: rgb(211,73,85);
  padding: 2.5px;
}

.success {
  background: rgb(1,184,124);
  padding: 2.5px;
}

span.comments {
  float: right;
}

form.delete-button {
    margin-left: 15px;
    margin-top: -20px;
    margin-bottom: 10px;
}

span#comment-date {
  float: right;
}

div p.dream-content {
  white-space: pre-wrap;
}

span.date {
  float: right;
}

.bg-nav {
  background-color: #0e233d;
}

nav .white-text {
  font-size: 1.5em;
}

section#comment-section .card {
  margin-bottom: 10px;
}

